FIxed button on mobile

--- a/index.css
+++ b/index.css
@@ -24,6 +24,7 @@ body {
 .buttons-container button {
   border-radius: 20px;
   max-width: 500px;
+  min-width: fit-content;
 }
 
 .restart {
